# kata

./: README.md  configure.ac
src/: Makefile.am  kata.c  kata.h
tests/: Makefile.am  check_kata.c
